addingg a background Video

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Vide Background-->
+    <video src="watch.mp4" class="video-background" loop muted autoplay></video>
+    
     <!-- Script -->
     <script src="script.js"></script>
 </body>
