--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <!-- Vide Background-->
     <video src="watch.mp4" class="video-background" loop muted autoplay></video>
-    
+     <!-- Container -->
+     <div class="container"> </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
