--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <!-- Vide Background-->
     <video src="watch.mp4" class="video-background" loop muted autoplay></video>
      <!-- Container -->
-     <div class="container"> </div>
+     <div class="container"> 
+        <!-- Input -->
+          <div class="input-container">
+            <h1>Create a Custom Countdown !</h1>
+            <form action="" class="form">
+                 <label for="title">Title</label>
+                 <input type="text" id="title" placeholder="what are you counting down to ?">
+                 <label for="date-picker">Select a Date</label>
+                 <input id="date-picker"></input>
+                 <button type="submit">Submit</button>
+            </form>
+          </div>
+     </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
