--- a/index.html
+++ b/index.html
@@ -13,16 +13,33 @@
      <!-- Container -->
      <div class="container"> 
         <!-- Input -->
-          <div class="input-container">
+          <div class="input-container" id="input-container" hidden>
             <h1>Create a Custom Countdown !</h1>
             <form action="" class="form">
                  <label for="title">Title</label>
                  <input type="text" id="title" placeholder="what are you counting down to ?">
                  <label for="date-picker">Select a Date</label>
-                 <input id="date-picker"></input>
-                 <button type="submit">Submit</button>
+                 <input type="date" id="date-picker"></input>
+                 <button type="submit" placeholder="yyyy-mm-dd">Submit</button>
             </form>
           </div>
+          <!-- Countdown -->
+          <div class="countdown" id="countdown" hidden>  
+               <h1 id="countdown-title">Countdown Title Here</h1>
+               <ul>
+                   <li><span>3</span>Days</li>
+                   <li><span>6</span>Hours</li>
+                   <li><span>45</span>Minuts</li>
+                   <li><span>52</span>Seconds</li>
+                   
+               </ul>
+               <button id="countdown-button">Reset</button>
+           </div>
+           <div class="complete" id="complete">
+              <h1 class="complete-title">Countdown complete!</h1>
+              <h1 id="complete-info">Countdown Finished on 05-05-2020 </h1>
+              <button id="complete-button">New Countdown</button>
+           </div>
      </div>
     <!-- Script -->
     <script src="script.js"></script>
