--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <!-- Container -->
      <div class="container"> 
         <!-- Input -->
-          <div class="input-container" id="input-container" hidden>
+          <div class="input-container" id="input-container" >
             <h1>Create a Custom Countdown !</h1>
             <form action="" class="form">
                  <label for="title">Title</label>
@@ -35,7 +35,7 @@
                </ul>
                <button id="countdown-button">Reset</button>
            </div>
-           <div class="complete" id="complete">
+           <div class="complete" id="complete" hidden>
               <h1 class="complete-title">Countdown complete!</h1>
               <h1 id="complete-info">Countdown Finished on 05-05-2020 </h1>
               <button id="complete-button">New Countdown</button>
