--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                </ul>
                <button id="countdown-button">Reset</button>
            </div>
+           <!-- Complete -->
            <div class="complete" id="complete" hidden>
               <h1 class="complete-title">Countdown complete!</h1>
               <h1 id="complete-info">Countdown Finished on 05-05-2020 </h1>
