--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Input -->
           <div class="input-container" id="input-container" >
             <h1>Create a Custom Countdown !</h1>
-            <form action="" class="form">
+            <form class="form" id="countdownForm">
                  <label for="title">Title</label>
                  <input type="text" id="title" placeholder="what are you counting down to ?">
                  <label for="date-picker">Select a Date</label>
